samples/_failures_safe/1761308820_30e8eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e73e77a.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_1e73e77a.c:162:9: error: expected declaration or statement at end of input
  162 |         if (!parse_term(stream)) return 0;
      |         ^~
./samples/SAFE/__tmp_1e73e77a.c:162:9: error: expected declaration or statement at end of input
